# advent-of-code-2018

./: .editorconfig  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  day.rs.sample  day20.py
.github/workflows/: rust.yml
data/: day08
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  input.rs  main.rs
