[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Pablo Santiago Blum de Aguiar <scorphus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
paste = "1.0"
text_io = "0.1.12"
